--- a/index.html
+++ b/index.html
@@ -4,6 +4,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300&display=swap" rel="stylesheet">
     <title>Document</title>
     <link rel="stylesheet" href="./css/master.css">
 </head>
@@ -11,17 +14,38 @@
     <div class="container">
         <!--HEADER-->
         <header class="mrg pdng">
-            <div class="debug-content">dkfjdk</div>
-            <div class="debug-content">xkdjdkvj</div>
+            <a class="brand mrg" href="/">
+                <img src="./img/logo.png" alt="logo">
+            </a>
+            <nav>
+                <ul class="main-menu">
+                    <li>
+                        <a href="/">Features</a>
+                    </li>
+                    <li>
+                        <a href="/">Editorials</a>
+                    </li>
+                    <li>
+                        <a href="/">Environments</a>
+                    </li>
+                    <li>
+                        <a href="/">Blog</a>
+                    </li>
+                    <li>
+                        <a href="/">Shop</a>
+                    </li>
+                    <li>
+                        <a href="/">Contact</a>
+                    </li>
+                </ul>
+            </nav>
         </header>
         <!--MAIN-->
         <main class="mrg">
 
             <section class="hero mrg pdng">
-                 <div class="debug-content">content</div>
-                 <div class="debug-content">content</div>
-                 <div class="debug-content">cont</div>
-                 <div class="debug-content">mdfknsd</div>
+                <img class="pictures" src="./img/banner.jpg" alt="">
+
             </section>
 
             <section class="colums-section">
