--- a/index.html
+++ b/index.html
@@ -43,9 +43,7 @@
         <!--MAIN-->
         <main class="mrg">
 
-            <section class="hero mrg pdng">
-                <img class="pictures" src="./img/banner.jpg" alt="">
-
+            <section class="hero mrg pdng pic">
             </section>
 
             <section class="colums-section">
