--- a/index.html
+++ b/index.html
@@ -44,6 +44,11 @@
         <main class="mrg">
 
             <section class="hero mrg pdng pic">
+                <div></div>
+                <div class="hero-description">
+                    <h3>Pretium at placerat dui interdum nunc <br>in eros urna morbi</h3>
+                    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. <br> corrupti beatae, est veniam quo possimus reiciendis ad unde </p>
+                </div>
             </section>
 
             <section class="colums-section">
@@ -78,3 +83,13 @@
 </body>
 </html>
 
+
+
+
+
+
+
+
+
+
+<!--filter: brightness(75%);
