--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
         </main>
         <!--FOOTER-->
         <footer class="fot pdng">
-            <div class="debug-content">mdfknsd</div>
+            Designed with <span class="heart">&hearts;</span>
         </footer>
 
     </div>
