--- a/index.html
+++ b/index.html
@@ -44,12 +44,12 @@
             </nav>
         </header>
         <!--MAIN-->
-        <main class="mrg">
+        <main class="mrg pdng">
 
             <section class="hero mrg pdng pic">
                 <div class="drk"></div>
                 <div class="hero-description">
-                    <h3>Pretium at placerat dui interdum nunc <br>in eros urna morbi</h3>
+                    <div>Pretium at placerat dui interdum nunc <br>in eros urna morbi</div>
                     <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. <br> corrupti beatae, est veniam quo possimus reiciendis ad unde </p>
                 </div>
             </section>
